deploy: 7708d063e09c0e83ff4b1963a6329eca0fa0bb69

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <link rel="shortcut icon" type="image/x-icon" href="./logo.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/logo.ico" />
     <script>
       window.routerBase = "/art-antd-react/";
     </script>
     <script>
-      //! umi version: 3.5.32
+      //! umi version: 3.5.33
     </script>
     <script>
       !(function () {
